--- a/main.css
+++ b/main.css
@@ -13,6 +13,11 @@ a:active {
     color: rgb(255, 255, 255);
 }
 
+body{
+    background-image: url(./imagenes/tomorrowland.jpg);
+    background-size: auto;
+}
+
 .df-header {
     display: flex;
     justify-content: space-between;
@@ -95,6 +100,10 @@ a:active {
 
 }
 
+h1 {
+    margin-left: 70px;
+}
+
 .presentacion-img {
     width: 500px;
     height: 700px;
@@ -137,29 +146,36 @@ a:active {
     font-weight: 700;
     display: flex;
     justify-content: center;
+    margin: 20px;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.452);
 }
 
-.tomorrow {
-    width: 100%;
-    height: 600px;
-    object-fit: cover;
-    display: flex;
-    justify-content: center;
-}
 
 .iframe {
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 3%;
+    justify-items: center;
     align-items: center;
-    margin: 10px;
+    width: 100%;
+    height: 70vh;
+    margin-top: -150px;
+}
+
+iframe {
+    width: 92%;
+    height: 48%;
+    border: solid black 2px;
 }
 
 .iframesc {
     display: flex;
     justify-content: center;
-    margin: 30px;
+    align-items: center;
+    margin-bottom: 70px;
+    height: 45vh;
 }
 
 .iframe-musica {
@@ -168,6 +184,10 @@ a:active {
     align-items: center;
     margin: 10px;
     padding: 30px;
+}
+
+.infocontac {
+    margin: 30px;
 }
 
 /* FIN MAIN */
@@ -203,3 +223,137 @@ a:active {
 }
 
 /* FIN FOOTER */
+
+@media (max-width: 576px) {
+    body {
+        background-size: 100vh;
+    }
+
+    h1 {
+        display: none;
+    }
+
+    .df-ul {
+        font-size: 75%;
+    }
+    .bienvenido {
+        display: none;
+    
+    }
+
+    .df-header {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .logomin {
+        width: 100px;
+        height: 100px;
+    }
+
+    .iframe {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        height: 140vh;
+        margin-top: 10px;
+    }
+
+    iframe {
+        width: 80%;
+        height: 200px;
+        border: solid black 2px;
+    }
+
+    .iframesc {
+        margin-bottom: 30px;
+        height: 40vh;
+    }
+
+    .type-weight {
+        display: none;
+    }
+
+    .bg-footer {
+        background-color: rgb(0, 0, 0);
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        justify-items: center;
+    }
+
+    .titulomain {
+        margin: 15px;
+        padding: 10px;
+        font-size: small;
+    }
+}
+
+@media (max-width: 500px) {
+    .logomin {
+        display: none;
+    }
+
+    .df-ul {
+        font-size: 65%;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    .iframe {
+        grid-column-gap: 3%;
+        grid-row-gap: 5px;
+        justify-items: center;
+        align-items: center;
+        width: 100%;
+        height: 150vh;
+        margin: 5px;
+    }
+
+    .iframesc {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 10px;
+        height: 35vh;
+    }
+
+    .titulomain {
+        margin: 15px;
+        padding: 10px;
+        font-size: xx-small;
+    }
+}
+
+@media (max-width: 428px) {
+    .df-ul {
+        font-size: 55%;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    .titulomain {
+        margin: 15px;
+        padding: 10px;
+        font-size: xx-small;
+    }
+
+    .iframesc {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 10px;
+        height: 30vh;
+    }
+
+    .iframe {
+        grid-column-gap: 3%;
+        grid-row-gap: 5px;
+        justify-items: center;
+        align-items: center;
+        width: 100%;
+        height: 130vh;
+        margin: 5px;
+    }
+}
+
