--- a/scss/_noticias.scss
+++ b/scss/_noticias.scss
@@ -6,8 +6,8 @@
     margin: 50px;
 }
 .noticias-1 {
-    width: 500px;
-    height: 400px;
+    width: 30%;
+    height: 900px;
 }
 
 .noticias-texto {
@@ -20,4 +20,8 @@
     margin: 40px;
     font-size: xx-large;
     background-color: rgba(0, 0, 0, 0.623);
+}
+
+.carousel {
+    height: 80vh;
 }
