--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,6 +1,6 @@
 body{
     background-image: url(../imagenes/tomorrowland.jpg);
-    background-size: auto;
+    background-size: 100%;
 }
 
 .min-height {
