--- a/scss/_presentacion.scss
+++ b/scss/_presentacion.scss
@@ -9,17 +9,17 @@
 
 .presentacion-p {
     flex-direction: column;
-    font-size: xx-large;
+    font-size: x-large;
     justify-content: space-around;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     color: rgba(255, 255, 255, 0.61);
-    margin: 50px;
+    margin: 30px;
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.452);
 }
 
 .presentacion-img {
-    width: 500px;
-    height: 700px;
+    width: 30%;
+    height: 100vh;
 }
