--- a/scss/_coder.scss
+++ b/scss/_coder.scss
@@ -1,5 +1,5 @@
 .bienvenido {
-    color: rgb(255, 255, 255);
+    color: $colorblanco;
     font-family: 'Raleway', sans-serif;
     font-weight: 500;
     justify-content: center;
