--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,5 @@
 .bg-footer {
-    background-color: rgb(0, 0, 0);
+    background-color: $colornegro;
     padding: 10px;
     display: flex;
     justify-content: space-around;
@@ -7,22 +7,28 @@
 }
 
 .type-weight {
-    color: rgb(255, 255, 255);
+    color: $colorblanco;
 }
 
-.redes a i {
-    font-size: 40px;
-    text-align: center;
-    padding: 5px 10px;
+.redes {
+    a {
+        i {
+            font-size: 40px;
+            text-align: center;
+            padding: 5px 10px;
+
+            &:hover {
+                transform: scale(1.5);
+                transition: all 1s ease;
+            }
+        }
+    }
 }
 
-.redes a i:hover {
-    transform: scale(1.5);
-    transition: all 1s ease;
-}
-
-.bacteria:hover {
-    color: green;
-    transform: scale(1.5);
-    transition: all 1s ease;
+.bacteria {
+    &:hover {
+        color: $colorverde;
+        transform: scale(1.5);
+        transition: all 1s ease;
+    }
 }
