--- a/scss/_iframes.scss
+++ b/scss/_iframes.scss
@@ -7,13 +7,13 @@
     align-items: center;
     width: 100%;
     height: 100vh;
-    margin-top: -15px;
+    margin-top: -50px;
 }
 
 iframe {
     width: 92%;
     height: 48%;
-    border: solid black 2px;
+    border: solid $colornegro 2px;
 }
 
 .iframesc {
