--- a/scss/_listas.scss
+++ b/scss/_listas.scss
@@ -1,14 +1,14 @@
 a,
 a:active {
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: $colorblanco;
 }
 
 .df-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(0, 0, 0);
+    background-color: $colornegro;
     flex-direction: row;
 }
 
@@ -19,14 +19,14 @@ a:active {
     list-style: none;
     font-family: 'Raleway', sans-serif;
     font-weight: 200;
-}
 
-.df-ul li {
-    margin: 10px;
-}
+    li {
+        margin: 10px;
 
-.df-ul li:hover {
-    transform: scale(1.25);
-    transition: all 0.6s ease;
-    font-weight: 600;
+        &:hover {
+            transform: scale(1.25);
+            transition: all 0.6s ease;
+            font-weight: 600;
+        }
+    }
 }
