--- a/scss/_logos.scss
+++ b/scss/_logos.scss
@@ -2,11 +2,11 @@
     display: flex;
     justify-content: left;
     align-items: center;
-}
 
-.logo h1 {
-    color: rgb(255, 255, 255);
-    font-family: 'Raleway', sans-serif;
+    h1 {
+        color: $colorblanco;
+        font-family: 'Raleway', sans-serif;
+    }
 }
 
 .logomin {
