--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../imagenes/tomorrowland.jpg);
+    background-image: url(../imagenes/tomorrowland.webp);
     background-size: 100%;
 }
 
