--- a/scss/_medias.scss
+++ b/scss/_medias.scss
@@ -42,7 +42,7 @@
     }
     
     .carousel {
-        height: 80vh;
+        height: 100%;
     }   
 }
 
@@ -111,7 +111,7 @@
     }
     
     .carousel {
-        height: 80vh;
+        height: 100%;
     }
 }
 
@@ -145,7 +145,7 @@
     }
     
     .carousel {
-        height: 80vh;
+        height: 90%;
     }
 }
 
@@ -230,6 +230,10 @@
     .noticias-1 {
         display: none;
     }
+
+    .carousel {
+        height: 70%;
+    }
 }
 
 @media (max-width: 500px) {
@@ -283,6 +287,10 @@
 
     .noticias-1 {
         display: none;
+    }
+
+    .carousel {
+        height: 70%;
     }
 }
 
@@ -347,6 +355,6 @@
     }
     
     .carousel {
-        height: 90vh;
+        height: 70%;
     }
 }
