--- a/scss/_iframes.scss
+++ b/scss/_iframes.scss
@@ -1,3 +1,8 @@
+/*aca implementamos el uso de mixin*/
+@mixin flex {
+    display: flex;
+}
+
 .iframe {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -17,7 +22,7 @@ iframe {
 }
 
 .iframesc {
-    display: flex;
+    @include flex();
     justify-content: center;
     align-items: center;
     margin-bottom: 70px;
@@ -25,7 +30,7 @@ iframe {
 }
 
 .iframe-musica {
-    display: flex;
+    @include flex();
     flex-direction: column;
     align-items: center;
     margin: 10px;
